--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@ body {
   line-height: 1.6;
   color: #333;
   background-color: #f9f9f9;
+  scroll-behavior: smooth;
 }
 
 .nav {
@@ -854,9 +855,13 @@ body {
     }
 
     .r-nav {
-        background-color: #ffff72;
+        background-color: #ffff7271;
         display: flex;
         padding: 1rem 1rem;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
     }
     .r-nav .nav-links {
         position: absolute;
@@ -906,6 +911,10 @@ body {
     max-height: 600px;
     margin-top: 0;
   }
+
+  .video-btn {
+    padding: 0.5rem 0.8rem;
+  }
 }
 
 @media (max-width: 480px) {
@@ -915,6 +924,9 @@ body {
 }
 
 @media (max-width: 420px) {
+  .video-btn {
+    padding: 0.4rem 0.6rem;
+  }
   .cta-form input[type="email"] {
     padding: 0.6rem 1rem;
   }
